[TestSuite] Corretti problemi testsuite connettori